fix: 이벤트 트리거 pull_request_target으로 변경

--- a/.github/workflows/test-pr-on-dev-branch.yml
+++ b/.github/workflows/test-pr-on-dev-branch.yml
@@ -1,7 +1,7 @@
 name: Test PR on dev branch
 run-name: Testing PR by ${{ github.actor }}
 on:
-  pull_request:
+  pull_request_target:
     branches:
       - dev
       - develop
