fix: 이벤트 트리거 branches 배열로 변경

--- a/.github/workflows/test-pr-on-dev-branch.yml
+++ b/.github/workflows/test-pr-on-dev-branch.yml
@@ -1,10 +1,8 @@
 name: Test PR on dev branch
 run-name: Testing PR by ${{ github.actor }}
 on:
-  pull_request_target:
-    branches:
-      - dev
-      - develop
+  pull_request:
+    branches: [dev, develop]
 jobs:
   say_hello:
     runs-on: ubuntu_latest
