fix: 이벤트 트리거 branches ""로 감쌈?

--- a/.github/workflows/test-pr-on-dev-branch.yml
+++ b/.github/workflows/test-pr-on-dev-branch.yml
@@ -2,9 +2,13 @@ name: Test PR on dev branch
 run-name: Testing PR by ${{ github.actor }}
 on:
   pull_request:
-    branches: [dev, develop]
+    branches:
+    - "dev"
+    - "develop"
+
 jobs:
   say_hello:
+    if: {{github.}}
     runs-on: ubuntu_latest
     env:
       FIRST_NAME: Jaehwan
