fix: 문법 오류 수정 - ubuntu_latest 말고 ubuntu-latest로 수정 - if문 지우는 거 깜빡했었는데 지움

--- a/.github/workflows/test-pr-on-dev-branch.yml
+++ b/.github/workflows/test-pr-on-dev-branch.yml
@@ -6,8 +6,7 @@ on:
 
 jobs:
   say_hello:
-    if: {{github.}}
-    runs-on: ubuntu_latest
+    runs-on: ubuntu-latest
     env:
       FIRST_NAME: Jaehwan
     steps:
